Demosite.Angular/yaml/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demosite-rus-client-angular-deployment-||env||
  namespace: "||namespace||"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demosite-rus-client-angular-||env||
  template:
    metadata:
      labels:
        app: demosite-rus-client-angular-||env||
        logging: enabled
    spec:
      terminationGracePeriodSeconds: 100
      containers:
      - image: "||registry||/demosite-rus-client-angular:||version||"
        name: demosite-rus-client-angular-||env||
        ports:
        - containerPort: 4000
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "512Mi"
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Europe/Moscow
          type: ""
        name: tz-config
---
apiVersion: v1
kind: Service
metadata:
  name: demosite-rus-client-angular-service-||env||
  namespace: "||namespace||"
spec:
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: demosite-rus-client-angular-||env||
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demosite-rus-client-angular-ingress-||env||
  namespace: "||namespace||"
spec:
  rules:
  - host: "||host||"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: demosite-rus-client-angular-service-||env||
            port:
              number: 80
